<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/scrollView"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/material_view_pager_placeholder" />

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="@dimen/cardMarginVertical"
      android:layout_marginLeft="@dimen/cardMarginHorizontal"
      android:layout_marginRight="@dimen/cardMarginHorizontal"
      android:layout_marginTop="@dimen/cardMarginVertical"
      android:background="@android:color/white"
      app:cardCornerRadius="4dp"
      app:cardElevation="4dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_firstname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:paddingTop="4dp">

          <EditText
            android:id="@+id/input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstname"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textAllCaps="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_lastname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_phonenumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/input_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phonenumber"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_activityarea"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/input_activityarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_activityarea"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
          android:id="@+id/relativeLayout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="20dp">

          <LinearLayout
            android:id="@+id/layout_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <CheckBox
              android:id="@+id/checkBox_horizon"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:text="@string/checkBox_horizon" />

            <CheckBox
              android:id="@+id/checkBox_hope"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/button"
              android:layout_centerHorizontal="true"
              android:text="@string/checkBox_hope" />

            <CheckBox
              android:id="@+id/checkBox_fusion"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/button"
              android:layout_centerHorizontal="true"
              android:text="@string/checkBox_fusion" />

            <CheckBox
              android:id="@+id/checkBox_origin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/button"
              android:layout_centerHorizontal="true"
              android:text="@string/checkBox_origin" />

            <CheckBox
              android:id="@+id/checkBox_extra"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/button"
              android:layout_centerHorizontal="true"
              android:text="@string/checkBox_extra" />

            <CheckBox
              android:id="@+id/checkBox_wedding"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/button"
              android:layout_centerHorizontal="true"
              android:text="@string/checkBox_wedding" />

          </LinearLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/layout_checkbox"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Switch
              android:id="@+id/animation_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_animation"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/seo_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_seo"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/eco_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_eco"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/translation_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_translation"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/photo_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_photo"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/blog_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_blog"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/menu_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_menu"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/contact_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:text="@string/start_contact"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/ariane_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="true"
              android:text="@string/start_ariane"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />

            <Switch
              android:id="@+id/websitemap_Switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="true"
              android:text="@string/start_websitemap"
              android:textAlignment="textEnd"
              android:textOff="No"
              android:textOn="Yes" />


          </LinearLayout>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_message"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal">

          <EditText
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_message"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:textAllCaps="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
          android:id="@+id/btn_send"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="20dp"
          android:background="@drawable/gradient_start_contact"
          android:text="@string/btn_send"
          android:textColor="@android:color/white" />

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>

</android.support.v4.widget.NestedScrollView>
